--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "esm": "^3.2.25",
     "express": "^4.18.1",
     "nodemon": "^2.0.20",
